--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on:
   push:
 jobs:
   tests:
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest, 	macos-latest]
     steps:
     - uses: actions/checkout@v2.3.2
     - uses: cachix/install-nix-action@v10
