--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,12 @@ on:
   push:
 jobs:
   tests:
-    runs-on: [ubuntu-latest, 	macos-latest]
+    strategy:
+      matrix:
+        os:
+          - ubuntu-18.04
+          - macos-10.14
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2.3.2
     - uses: cachix/install-nix-action@v10
