--- a/.github/workflows/update-niv.yml
+++ b/.github/workflows/update-niv.yml
@@ -15,6 +15,7 @@ jobs:
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v3
       with:
+        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         commit-message: "chore: update niv dependencies"
         title: "chore: update niv dependencies"
         branch: "chore/update-niv-dependencies"
