--- a/.github/workflows/update-niv.yml
+++ b/.github/workflows/update-niv.yml
@@ -11,11 +11,21 @@ jobs:
     steps:
     - uses: actions/checkout@v2.3.2
     - uses: cachix/install-nix-action@v10
-    - run: nix-shell --run "niv update"
+      with: 
+        skip_adding_nixpkgs_channel: true
+    - run: GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} nix-shell --run "niv update"
+    - uses: cachix/cachix-action@v6
+      with:
+        name: nix-getting-started-template
+        signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
+        # Only needed for private caches
+        #authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+    - run: nix-build
+    - run: nix-shell --run "echo OK"
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v3
       with:
         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-        commit-message: "chore: update niv dependencies"
-        title: "chore: update niv dependencies"
-        branch: "chore/update-niv-dependencies"
+        commit-message: "[automation] update niv dependencies"
+        title: "[automation] update niv dependencies"
+        branch: "automation/update-niv-dependencies"
