--- a/.github/workflows/update-niv.yml
+++ b/.github/workflows/update-niv.yml
@@ -23,7 +23,7 @@ jobs:
         # Only needed for private caches
         #authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
         #    - run: nix-build
-    - run: nix-shell --run "pre-commit run -a"
+    # - run: nix-shell --run "pre-commit run -a"
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v3
       with:
