--- a/.github/workflows/update-niv.yml
+++ b/.github/workflows/update-niv.yml
@@ -22,7 +22,7 @@ jobs:
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
         # Only needed for private caches
         #authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - run: nix-build build.nix
+        #- run: nix-build build.nix
     - run: nix-shell --run "pre-commit run -a"
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v3
