--- a/.github/workflows/update-flake.yml
+++ b/.github/workflows/update-flake.yml
@@ -1,4 +1,4 @@
-name: Update niv
+name: Update Flake
 
 on:
   schedule:
@@ -13,21 +13,22 @@ jobs:
     - uses: actions/checkout@v2.3.4
     - uses: cachix/install-nix-action@v12
       with:
-        nix_path: nixpkgs=channel:nixos-unstable
-    # https://github.com/nmattia/niv/issues/280
-    - run: GITHUB_PATH= nix-shell --run "niv update"
-    - uses: cachix/cachix-action@v7
+        install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-3.0pre20201007_5257a25/install
+        extra_nix_config: |
+          experimental-features = nix-command flakes
+    - run: nix flake update --recreate-lock-file
+    - uses: cachix/cachix-action@v8
       with:
         name: mjlbach
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
         # Only needed for private caches
         #authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-        #- run: nix-build build.nix
-    - run: nix-shell --run "pre-commit run -a"
+        # - run: nix build
+    # - run: nix-shell --run "echo OK"
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v3
       with:
         token: "${{ secrets.GITHUB_TOKEN }}"
-        commit-message: "[automation] update niv dependencies"
-        title: "[automation] update niv dependencies"
-        branch: "automation/update-niv-dependencies"
+        commit-message: "[automation] update flake dependencies"
+        title: "[automation] update flake dependencies"
+        branch: "automation/update-flake-dependencies"
