--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,11 @@ on:
   pull_request:
   push:
 jobs:
-  build-linux:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest]
     steps:
     - uses: actions/checkout@v2.3.4
       with:
@@ -12,7 +15,7 @@ jobs:
         fetch-depth: 0
     - uses: cachix/install-nix-action@v12
       with:
-        install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-3.0pre20201007_5257a25/install
+        install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-2.4pre20201221_9fab14a/install
         extra_nix_config: |
           experimental-features = nix-command flakes
     - uses: cachix/cachix-action@v8
@@ -23,20 +26,5 @@ jobs:
       with:
         name: mjlbach
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
-        # Only needed for private caches
-        #authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
     - run: nix build 
-    # - run: nix-shell --run "echo OK"
-  build-macos:
-    runs-on: macos-10.15
-    steps:
-    - uses: actions/checkout@v2.3.4
-    - uses: cachix/install-nix-action@v12
-    - uses: cachix/cachix-action@v8
-      with:
-        name: mjlbach
-        signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
-        # Only needed for private caches
-        #authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - run: nix-build flake-compat.nix
     # - run: nix-shell --run "echo OK"
