--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,11 @@
 name: "Build"
-on: [push, pull_request]
+# on: [push, pull_request]
+on:
+  schedule:
+    # every day at 8am UTC
+    - cron: '10 8 * * *'
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ${{ matrix.os }}
