ci: also build on push to master or PR
And document the reasoning a bit.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,23 @@
 name: "Build"
-# on: [push, pull_request]
+
 on:
+  # Build on push to master
+  push:
+    branches:
+      - master
+
+  # Build on internal pull requests
+  pull_request:
+
+  # Allow to trigger for external PRs
+  workflow_dispatch:
+
+  # Also run regularly because pushes initiated by GitHub Actions don't
+  # trigger the above events.
   schedule:
     # every day at 8am UTC
     - cron: '10 8 * * *'
-  workflow_dispatch:
+
 
 jobs:
   build:
