--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,38 +1,18 @@
 name: "Build"
 
 on:
-  # Build on push to master
   push:
-    branches:
-      - master
-
-  # Build on internal pull requests
   pull_request:
-
-  # Allow to trigger for external PRs
   workflow_dispatch:
-
-  # Also run regularly because pushes initiated by GitHub Actions don't
-  # trigger the above events.
-  schedule:
-    # every day at 8am UTC
-    - cron: '10 8 * * *'
-
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [macos-10.15, ubuntu-latest]
+    runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: cachix/install-nix-action@v16
-      with:
-        extra_nix_config: |
-          access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+    - uses: actions/checkout@v3.0.2
+    - uses: cachix/install-nix-action@v17
     - uses: cachix/cachix-action@v10
       with:
         name: nix-community
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
-    - run: nix build 
+    - run: nix build
