--- a/.github/workflows/update-flake.yml
+++ b/.github/workflows/update-flake.yml
@@ -5,33 +5,18 @@ on:
     # every day at 8am UTC
     - cron: '0 8 * * *'
   workflow_dispatch:
-
 jobs:
-  update-dependencies:
+  updates:
+    name: "Update the flake.lock"
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: cachix/install-nix-action@v16
+    - uses: actions/checkout@v3.0.2
       with:
-        install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-3.0pre20201007_5257a25/install
-        extra_nix_config: |
-          experimental-features = nix-command flakes
-    - run: nix flake update --recreate-lock-file
-    - uses: cachix/cachix-action@v10
-      with:
-        name: nix-community
-        signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
-        # Only needed for private caches
-        #authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-        # - run: nix build
-    # - run: nix-shell --run "echo OK"
-    #- name: Create Pull Request
-    #  uses: peter-evans/create-pull-request@v3
-    #  with:
-    #    token: "${{ secrets.GITHUB_TOKEN }}"
-    #    commit-message: "[automation] update flake dependencies"
-    #    title: "[automation] update flake dependencies"
-    #    branch: "automation/update-flake-dependencies"
-    - uses: stefanzweifel/git-auto-commit-action@v4.11.0
-      with:
-        commit_message: "[automation] update flake dependencies"
+        fetch-depth: 0
+    - uses: cachix/install-nix-action@v17
+    - name : 'flake.lock: Update'
+      run: |
+        git config user.name 'github-actions'
+        git config user.email 'action@github.com'
+        nix flake update --commit-lock-file
+        git push
